--- a/client/src/styles/Select.module.css
+++ b/client/src/styles/Select.module.css
@@ -15,7 +15,7 @@ button {
   padding: 0 15px;
   font-size: 13px;
   line-height: 1;
-  height: 35px;
+  height: 20px;
   gap: 5px;
   background-color: white;
   color: var(--violet-11);
